--- a/styles.css
+++ b/styles.css
@@ -86,4 +86,9 @@ body {
     .card-mobile{
         padding: 0px;
     }
+    #about{
+      padding: 20px;
+      border-radius: 0.25rem;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
   }
